/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
}

group = 'com.epam.reportportal'
version = '1.0.0'
description = 'agent-java-karate'
java.sourceCompatibility = JavaVersion.VERSION_11

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
    mavenCentral()
}

dependencies {
    api 'com.epam.reportportal:client-java:5.1.16'
    api 'com.epam.reportportal:logger-java-logback:5.1.3'
    api 'com.intuit.karate:karate-core:1.3.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0-M1'
    testImplementation 'org.mockito:mockito-core:5.4.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.4.0'
    compileOnly 'org.projectlombok:lombok:1.18.26'
    annotationProcessor 'org.projectlombok:lombok:1.18.26'
    testCompileOnly 'org.projectlombok:lombok:1.18.26'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.26'

}

tasks.withType(Test) {
    jvmArgs += ['--add-opens', 'java.base/java.lang=ALL-UNNAMED',
                '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
                '--add-opens', 'java.base/java.util=ALL-UNNAMED',
                '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED']
}

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}
